updated the ps commands

--- a/assignments/assignment1/Makefile
+++ b/assignments/assignment1/Makefile
@@ -1,7 +1,7 @@
 all: Shell379
 
-Shell379: Shell379.c
-	gcc -o Shell379 Shell379.c
+Shell379: Shell379.cpp
+	g++ -o Shell379 Shell379.cpp
 
 clean:
 	rm -f Shell379
