--- a/assignments/assignment1/Makefile
+++ b/assignments/assignment1/Makefile
@@ -1,7 +1,13 @@
-all: Shell379
+all: Shell379 sleeper runner
 
 Shell379: Shell379.cpp
 	g++ -o Shell379 Shell379.cpp
 
+sleeper: sleeper.cpp
+	g++ -o sleeper sleeper.cpp
+
+runner: runner.cpp
+	g++ -o runner runner.cpp
+
 clean:
-	rm -f Shell379
+	rm -f Shell379 sleeper runner
