adding in missing files

--- a/inClassExs/ch02.processes/makefile
+++ b/inClassExs/ch02.processes/makefile
@@ -7,10 +7,10 @@ fork:	fork.c
 	gcc -o fork fork.c
 
 threads: threads.c
-	gcc -o threads threads.c
+	gcc -pthread -o threads threads.c
 
 threadssm: threadssm.c
-	gcc -o threadssm threadssm.c
+	gcc -pthread -o threadssm threadssm.c
 
 wait:	wait.c
 	gcc -o wait wait.c
