needs summary function, and splitting source files

--- a/assignments/assignment2/Makefile
+++ b/assignments/assignment2/Makefile
@@ -1,7 +1,7 @@
 CC = g++
 
-prodcon: prodcon.o commands.o
-	$(CC) -o prodcon prodcon.o commands.o
+prodcon: prodcon.o tands.o
+	$(CC) -pthread -o prodcon prodcon.o tands.o
 
 clean:
-	rm -f prodcon
+	rm -f prodcon prodcon.o tands.o
