--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,7 @@ inClassExs/ch03.communication/signal
 inClassExs/ch04.synchronization/mutex1
 inClassExs/ch04.synchronization/mutex2
 inClassExs/ch04.synchronization/sema
+assignments/assignment2/prodcon.2.log
+assignments/assignment2/prodcon.3.log
+assignments/assignment2/test2
+assignments/assignment2/prodcon.log
