--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,4 @@ assignments/assignment2/prodcon.2.log
 assignments/assignment2/prodcon.3.log
 assignments/assignment2/test2
 assignments/assignment2/prodcon.log
+labExs/lab3/mutex1
