finished adding non-busy wait

--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,4 @@ assignments/assignment2/prodcon.3.log
 assignments/assignment2/test2
 assignments/assignment2/prodcon.log
 labExs/lab3/mutex1
+assignments/assignment2/.nfs000000000000e9460000012d
