--- a/assignments/assignment2/Makefile
+++ b/assignments/assignment2/Makefile
@@ -2,11 +2,12 @@ CC = g++
 FLAGS = -O -pthread
 
 OBJECTS = prodcon.o
+TARGETS = prodcon
 
 prodcon: $(OBJECTS)
 	$(CC) $(FLAGS) -o $@ $^
 
 clean:
-	rm -f prodcon $(OBJECTS)
+	rm -f $(OBJECTS) $(TARGETS)
 
 $(OBJECTS): prodcon.hpp
