--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ assignments/assignment2/test2
 assignments/assignment2/prodcon.log
 labExs/lab3/mutex1
 assignments/assignment2/.nfs000000000000e9460000012d
+assignments/assignment2/test3
