initial files to get started with

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,7 @@ assignments/assignment2/prodcon.log
 labExs/lab3/mutex1
 assignments/assignment2/.nfs000000000000e9460000012d
 assignments/assignment2/test3
+assignments/assignment3/client/client
+assignments/assignment3/server/server
+assignments/assignment3/server/multiserver
+assignments/assignment3/client/.nfs000000000000b048000000f1
