--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ assignments/assignment3/client/client
 assignments/assignment3/server/server
 assignments/assignment3/server/multiserver
 assignments/assignment3/client/.nfs000000000000b048000000f1
+assignments/assignment3/client/client.o
