--- a/assignments/assignment3/server/Makefile
+++ b/assignments/assignment3/server/Makefile
@@ -1,10 +1,10 @@
 CC = g++
 FLAGS = -O -pthread
 
-OBJECTS = multiserver.o
+OBJECTS = server.o
 
-multiserver: $(OBJECTS)
+server: $(OBJECTS)
 	$(CC) $(FLAGS) -o $@ $^
 
 clean:
-	rm -f multiserver $(OBJECTS)
+	rm -f server $(OBJECTS)
